Fixed Spacing

--- a/instagram.css
+++ b/instagram.css
@@ -209,7 +209,7 @@ ul {
   margin: 0rem 0.5rem;
   border-radius: 4px;
   width: 250px;
-  height: 330px;
+  height: 280px;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 20px 2px;
 }
 
